[package]
name = "mio-afpacket"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
description = "Raw packet sockets (AF_PACKET) support for mio"
license = "MIT"
homepage = "https://github.com/polachok/mio-afpacket"
repository = "https://github.com/polachok/mio-afpacket"

[dependencies]
mio = "0.6"
libc = { git = "https://github.com/rust-lang/libc", branch = "master" }
