[package]
name = "mio-afpacket"
version = "0.1.2"
authors = ["Alexander Polakov <plhk@sdf.org>"]
description = "Raw packet sockets (AF_PACKET) support for mio"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/polachok/mio-afpacket"
repository = "https://github.com/polachok/mio-afpacket"
keywords = ["mio", "async", "raw", "socket"]
categories = ["network-programming","os"]
edition = "2018"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "os-ext", "net"] }
libc = { git = "https://github.com/rust-lang/libc", branch = "main" }
